FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/sf_devops__Submit_Component__c.object
<CustomObject>
    <description>Represents a source component that has been submitted.</description>
    <fields>
        <fullName>sf_devops__Change_Submission__c</fullName>
        <description>The Change_Submission that we where committed on.</description>
        <label>Change Submission</label>
        <referenceTo>sf_devops__Change_Submission__c</referenceTo>
        <relationshipLabel>Submit Components</relationshipLabel>
        <relationshipName>Submit_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__Empty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, then this submit component did not actual make any changes to the version control system.</description>
        <label>Empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__File_Path__c</fullName>
        <description>Stores the file path of the metadata</description>
        <label>File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Operation__c</fullName>
        <description>One of ADD, REMOVE or CHANGE that defines what operation was performed on this component.</description>
        <label>Operation</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Source_Component__c</fullName>
        <description>The component name (type:name)</description>
        <label>Source Component</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Source_Remote_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Remote Change that this was sourced from.  This might be empty if the commit did not originate in the dev ops center.</description>
        <label>Source Remote Change</label>
        <referenceTo>sf_devops__Remote_Change__c</referenceTo>
        <relationshipLabel>Submit Components</relationshipLabel>
        <relationshipName>Submit_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Submit Component</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Submit Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submit Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sf_devops__File_Path</fullName>
        <active>true</active>
        <description>A Submit Component cannot have its File_Path__c field changed after being set.</description>
        <errorConditionFormula>AND(ISCHANGED(sf_devops__File_Path__c),NOT(ISBLANK(PRIORVALUE(sf_devops__File_Path__c))))</errorConditionFormula>
        <errorMessage>A Submit Component cannot have its File_Path__c field changed once set.</errorMessage>
    </validationRules>
</CustomObject>